# packages/api/src/index.ts
@@ -5,6 +5,7 @@
 export * from "./api.ts";
 export * from "./auth.ts";
 export * from "./client.ts";
+export * from "./groups/captures.ts";
 export * from "./groups/errors.ts";
 export * from "./groups/health.ts";
 export * from "./groups/me.ts";
